[gd_scene load_steps=2 format=3 uid="uid://7n2d3r8r2cg7"]

[ext_resource type="Script" uid="uid://h2qd0obe8jcf" path="res://hud.gd" id="1_64ctp"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_64ctp")

[node name="MainMarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="BudgetLabels" type="VBoxContainer" parent="MainMarginContainer"]
layout_mode = 2

[node name="LB" type="Label" parent="MainMarginContainer/BudgetLabels"]
layout_mode = 2
size_flags_horizontal = 0
text = "Living Budget Remaining: "

[node name="FB" type="Label" parent="MainMarginContainer/BudgetLabels"]
layout_mode = 2
size_flags_horizontal = 0
text = "Fun Budget Remaining: "

[node name="FP" type="Label" parent="MainMarginContainer/BudgetLabels"]
layout_mode = 2
size_flags_horizontal = 0
text = "Fun Pool: "

[node name="Add Transaction" type="Button" parent="MainMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Add Transaction
"

[node name="Exit" type="Button" parent="MainMarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Exit"

[node name="ExitMarginContainer" type="MarginContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ExitVContainer" type="VBoxContainer" parent="ExitMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="ExitMarginContainer/ExitVContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Exit?"

[node name="ExitHContainer" type="HBoxContainer" parent="ExitMarginContainer/ExitVContainer"]
layout_mode = 2

[node name="ExitConfirm" type="Button" parent="ExitMarginContainer/ExitVContainer/ExitHContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Quit"

[node name="ExitCancel" type="Button" parent="ExitMarginContainer/ExitVContainer/ExitHContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Cancel"

[connection signal="pressed" from="MainMarginContainer/Add Transaction" to="." method="_on_add_transaction_pressed"]
[connection signal="pressed" from="MainMarginContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="ExitMarginContainer/ExitVContainer/ExitHContainer/ExitConfirm" to="." method="_on_exit_confirm_pressed"]
[connection signal="pressed" from="ExitMarginContainer/ExitVContainer/ExitHContainer/ExitCancel" to="." method="_on_exit_cancel_pressed"]
